# pkmn

./: .gitignore  Cargo.toml  README.md
src/: input.rs  main.rs  setup.rs
src/pkmn/: mod.rs  moves.rs  pokemon.rs  types.rs
