[package]
name = "pkmn"
version = "0.1.0"
authors = ["Ashe Aupepin <ashe.sudosmile@gmail.com>"]
description = "pokedex like cli, using the pokeapi and the excellent Rustemon crate"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2", features = ["cargo"] }
http-cache = "0.6"
serde = "1"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
rustemon = "2.0"
dialoguer = {version = "0.10", features = ["fuzzy-select"] }
indicatif = "0.17"
simplelog = "0.12"
log = "0.4.17"
triple_accel = "0.4.0"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
